# b15f-rs

./: Cargo.toml  Makefile  README.md
benches/: b15f.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/b15f/: all.html  index.html  macro.build_request!.html  macro.build_request.html  sidebar-items.js
docs/b15f/b15f/: index.html  sidebar-items.js  struct.B15F.html
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/b15f/: assert.rs.html  b15f.rs.html  error.rs.html  lib.rs.html  request.rs.html  usart.rs.html
examples/: connect.rs  nightrider.rs  read.rs  register.rs
src/: assert.rs  atmega1284p.rs  b15f.rs  dummy.rs  error.rs  lib.rs  request.rs  usart.rs
