[package]
name = "b15f-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "b15f"
path = "src/lib.rs"

[dependencies]
serialport = "4.2.0"
rand = "0.8.5"
avrd = { version = "1.0.0", features = ["all-mcus"] }

